[gd_scene load_steps=13 format=3 uid="uid://dlb3nbb7k6p1i"]

[ext_resource type="Script" path="res://scripts/GameScene.gd" id="1_jyku5"]
[ext_resource type="Theme" uid="uid://5hth02f35blx" path="res://myTheme.tres" id="2_c2duk"]
[ext_resource type="Texture2D" uid="uid://byg1lr85m6v0c" path="res://sprites/scaleBeam.png" id="2_gqdq3"]
[ext_resource type="Texture2D" uid="uid://byvodqw0jt5vq" path="res://sprites/graveyard.jpg" id="2_slu6m"]
[ext_resource type="Texture2D" uid="uid://5cbp1tr0dntk" path="res://sprites/scaleCenter.png" id="3_8l8p0"]
[ext_resource type="Texture2D" uid="uid://buk33vgcta34w" path="res://sprites/scalePlate.png" id="4_f0ft4"]
[ext_resource type="Texture2D" uid="uid://di47qsbsm26bc" path="res://sprites/house.png" id="5_rjpfm"]
[ext_resource type="AudioStream" uid="uid://bbqlsf30lv1dn" path="res://music/Kevin MacLeod   Pop Goes the Weasel.mp3" id="6_0ydp6"]
[ext_resource type="AudioStream" uid="uid://d0w7uh45q834f" path="res://music/Kevin Macleod  Killers.mp3" id="7_vbukn"]

[sub_resource type="Animation" id="Animation_g5li3"]
resource_name = "RightDownToUp"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScalePlateRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(303, 85), Vector2(303, -15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScalePlateLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-309, -17), Vector2(-309, 85)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScaleBeam:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.39626, -1.5708, -1.74533]
}

[sub_resource type="Animation" id="Animation_ct33i"]
resource_name = "RightUpToDown"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScalePlateRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(303, -17), Vector2(303, 85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScalePlateLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-309, 85), Vector2(-309, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScaleBeam:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.74533, -1.39626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pr0dm"]
_data = {
"RightDownToUp": SubResource("Animation_g5li3"),
"RightUpToDown": SubResource("Animation_ct33i")
}

[node name="Node2D" type="Node2D"]
position = Vector2(4, 616)
script = ExtResource("1_jyku5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_c2duk")

[node name="Graveyard" type="Sprite2D" parent="Control"]
modulate = Color(0.188235, 0.137255, 0.12549, 0.627451)
position = Vector2(575, -287)
scale = Vector2(0.600781, 1.13281)
texture = ExtResource("2_slu6m")

[node name="Scale" type="Sprite2D" parent="Control"]
position = Vector2(599, -321)

[node name="ScaleBeam" type="Sprite2D" parent="Control/Scale"]
position = Vector2(-1, -158)
rotation = -1.74533
scale = Vector2(1.18231, 2.60758)
texture = ExtResource("2_gqdq3")

[node name="AttachPointRight" type="Node2D" parent="Control/Scale/ScaleBeam"]
position = Vector2(4.72643, -122.403)
rotation = -1.76302
scale = Vector2(0.982055, 1.51073)

[node name="AttachPointLeft" type="Node2D" parent="Control/Scale/ScaleBeam"]
position = Vector2(5.16099, 121.474)
rotation = -1.76302
scale = Vector2(0.982055, 1.51073)

[node name="ScaleCenter" type="Sprite2D" parent="Control/Scale"]
position = Vector2(3, 38)
scale = Vector2(1.99791, 1.53905)
texture = ExtResource("3_8l8p0")

[node name="ScalePlateRight" type="Sprite2D" parent="Control/Scale"]
position = Vector2(303, -17)
rotation = 0.0102167
scale = Vector2(2.92343, 1.93315)
texture = ExtResource("4_f0ft4")

[node name="House" type="Sprite2D" parent="Control/Scale/ScalePlateRight"]
position = Vector2(-3.37152, 7.29456)
rotation = -0.0154496
scale = Vector2(0.342087, 0.517275)
skew = 0.00869358
texture = ExtResource("5_rjpfm")

[node name="ScalePlateLeft" type="Sprite2D" parent="Control/Scale"]
position = Vector2(-309, 85)
scale = Vector2(3.17839, 1.77781)
texture = ExtResource("4_f0ft4")

[node name="ScaleAnim" type="AnimationPlayer" parent="Control/Scale"]
libraries = {
"": SubResource("AnimationLibrary_pr0dm")
}

[node name="btnMainMenu" type="Button" parent="Control"]
offset_left = 8.0
offset_top = -27.0
offset_right = 139.0
offset_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_c2duk")
text = "Menu"

[node name="btnEndScreen" type="Button" parent="Control"]
offset_left = 847.0
offset_top = -31.0
offset_right = 1140.0
offset_bottom = 25.0
size_flags_horizontal = 8
text = "End Screen"

[node name="btnStartHome" type="Button" parent="Control"]
offset_left = 628.0
offset_top = -613.0
offset_right = 942.0
offset_bottom = -470.0
size_flags_horizontal = 8
text = "Debug:
Start Home"

[node name="btnStartWork" type="Button" parent="Control"]
offset_left = 234.0
offset_top = -615.0
offset_right = 565.0
offset_bottom = -472.0
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 0
text = "Debug:
Start Work"

[node name="HouseMusic" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("6_0ydp6")
autoplay = true

[node name="WorkMusic" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("7_vbukn")

[connection signal="pressed" from="Control/btnMainMenu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/btnMainMenu" to="." method="_on_btn_main_menu_pressed"]
[connection signal="pressed" from="Control/btnEndScreen" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/btnEndScreen" to="." method="_on_btn_end_screen_pressed"]
[connection signal="pressed" from="Control/btnStartHome" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/btnStartHome" to="." method="_on_btn_start_home_pressed"]
[connection signal="pressed" from="Control/btnStartWork" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/btnStartWork" to="." method="_on_btn_start_work_pressed"]
